--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Shop/new_arrivals/index.html">About</a>
+                        <a class="nav-link" href="about/index.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="faces.html">Store Policy</a>
