--- a/about/index.html
+++ b/about/index.html
@@ -119,15 +119,15 @@
             </div>
             <div class="col-md-7">
 
-                <h2>My Story</h2>
+                <h2>Behind The Brand</h2>
                 <p>Hi Beauties,</p>
-                <p>Growing up in Virginia Beach, the ocean was always my backyard, my playground, and my sanctuary. The salty breeze and endless waves shaped my childhood, instilling in me a deep love for the beach life. And as I grew older, so did my dream of starting something that reflected that love - something uniquely mine.</p>
-                <p>In 2021, amidst the chaos of the world, I found myself drawn to the idea of swimwear. It seemed like the perfect opportunity to combine my passion for fashion with my love for the beach. And so, with nothing but a dream and a desire to make it happen, I took the plunge.</p>
-                <p>From the very beginning, it's been a journey of discovery and growth. I've poured countless hours into researching, designing, and bringing my vision to life. And with each step forward, I've learned valuable lessons about resilience, perseverance, and the power of following your passion.</p>
-                <p>Today, as I look back on how far I've come, I'm filled with gratitude for the journey. It hasn't always been easy, but it's been worth every moment. And as I continue to chase my dreams and carve out my own path, I'm reminded of the magic that happens when you dare to believe in yourself.</p>
-                <p>So here's to the dreamers, the doers, and the ones who refuse to settle for anything less than extraordinary. Here's to embracing the journey, trusting the process, and never giving up on what sets your soul on fire.</p>
-                <p>With love and gratitude,</p>
-                <p>Bubblegumbabe</p>
+                <p>I'm Camden Arganza, a beach-loving soul from the beautiful shores of Virginia Beach.  I'm diving into the world of swimwear with my very own brand, Bubblegumbabe Swimwear!</p>
+                <p>Now, here's the lowdown: I may not have a ton of experience, but what I lack in know-how, I make up for in passion and drive. I mean, why wait for the perfect moment to chase your dreams, right? Sometimes you just gotta take the plunge and figure it out along the way.</p>
+                <p>So, here I am, soaking up the sun and learning the ropes as I go. And let me tell you, it's been one heck of a ride! But hey, isn't that what makes life exciting?</p>
+                <p>Bubblegumbabe Swimwear isn't just about bikinis and beach days. It's a reflection of my love for all things vibrant, playful, and oh-so-fun. From bold colors to cheeky prints, each piece is designed to make you feel like the ultimate beach babe - because life's a beach, and you deserve to look and feel fabulous every step of the way.</p>
+                <p>Thanks for joining me on this adventure. I can't wait to see where it takes us!</p>
+                <p>xoxo, Camden</p>
+     
                 <!-- Your content here -->
             </div>
 
@@ -140,7 +140,6 @@
             <div class="col-md-7">
 
                 <h2>My Story</h2>
-                <p>Hi Beauties,</p>
                 <p>Growing up in Virginia Beach, the ocean was always my backyard, my playground, and my sanctuary. The salty breeze and endless waves shaped my childhood, instilling in me a deep love for the beach life. And as I grew older, so did my dream of starting something that reflected that love - something uniquely mine.</p>
                 <p>In 2021, amidst the chaos of the world, I found myself drawn to the idea of swimwear. It seemed like the perfect opportunity to combine my passion for fashion with my love for the beach. And so, with nothing but a dream and a desire to make it happen, I took the plunge.</p>
                 <p>From the very beginning, it's been a journey of discovery and growth. I've poured countless hours into researching, designing, and bringing my vision to life. And with each step forward, I've learned valuable lessons about resilience, perseverance, and the power of following your passion.</p>
