--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <a class="nav-link" href="about/index.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="faces.html">Store Policy</a>
+                        <a class="nav-link" href="store-policy/index.html">Store Policy</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">VIP Babes</a>
@@ -79,7 +79,7 @@
                         <a class="nav-link" href="about.html">Refer A Friend</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="contact/index.html">Contact</a>
                     </li>
                 </ul>
 
@@ -177,13 +177,16 @@
 				<h5><img src="Media/instagram-4.png" alt="Instagram Logo"> BubbleGumBabeSwim</h5>
 			</div>
 
-			<div class="col-md-4">
-				<div class="mb-3">
-					  <label for="exampleFormControlInput1" class="form-label"><h4>Stay In Touch!</h4></label>
-					  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-					</div>
-					
-			</div>
+			<div class="col-xs-12 col-md-4">
+                <div class="mb-3">
+                      <label for="exampleFormControlInput1" class="form-label">Stay In Touch!</label>
+                      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                    </div>
+                <div class="col-auto">
+                    <button type="submit" class="btn btn-primary mb-3">Sign Up For Our Latest Updates And Deals</button>
+                  </div>
+                    
+            </div>
 		</div>
 	</div>
 </footer>
