--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="Shop/new_arrivals/index.html">New Arrivals</a></li>
-                            <li><a class="dropdown-item" href="#">Swimmys</a></li>
+                            <li><a class="dropdown-item" href="Shop/swimmies.html">Swimmys</a></li>
                             <li><a class="dropdown-item" href="#">Cover-Ups</a></li>
                            
                             <li><a class="dropdown-item" href="#">Accessories</a></li>
