--- a/Shop/newArrivals.html
+++ b/Shop/newArrivals.html
@@ -1239,8 +1239,8 @@
                 </div>
         
             <div class="col-xs-12 col-md-2 justify-content-center">
-                <a class="nav-link" href="about/index.html"><h4>About</h4></a>
-                <a class="nav-link" href="store-policy/index.html"><h4>Store Policy</h4></a>
+                <a class="nav-link" href="../about/index.html"><h4>About</h4></a>
+                <a class="nav-link" href="../store-policy/index.html"><h4>Store Policy</h4></a>
              
             </div>
 
