--- a/Shop/newArrivals.html
+++ b/Shop/newArrivals.html
@@ -63,7 +63,7 @@
                             <li><a class="dropdown-item" href="coverUps.html">Cover-Ups</a></li>
                            
                             <li><a class="dropdown-item" href="accessories.html">Accessories</a></li>
-                            <li><a class="dropdown-item" href="#">Gift cards</a></li>
+                        
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -84,7 +84,7 @@
                  <!-- User info -->
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link navbar-profile" href="login.html">
+                        <a class="nav-link navbar-profile" href="../login.html">
                             <img src="Media/person-fill.svg" alt="Profile Icon" width="50" height="50">
                         </a>
                     </li>
