--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@
                             Shop
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="Shop/new_arrivals/index.html">New Arrivals</a></li>
+                            <li><a class="dropdown-item" href="Shop/newArrivals.html">New Arrivals</a></li>
                             <li><a class="dropdown-item" href="Shop/swimmies.html">Swimmys</a></li>
                             <li><a class="dropdown-item" href="Shop/coverUps.html">Cover-Ups</a></li>
                            
